--- a/example.ipynb
+++ b/example.ipynb
@@ -6,7 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"123\")"
+    "print(\"123\")\n",
+    "\n",
+    "\n",
+    "a= 5\n",
+    "b= 10\n",
+    "\n",
+    "print(a+b)"
    ]
   }
  ],
